v0.3.1/_sources/gallery/symbols/points.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/symbols/points.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_symbols_points.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_symbols_points.py:


Points
------

The :meth:`pygmt.Figure.plot` method can plot points. The plot symbol and size
is set with the ``style`` parameter.

.. GENERATED FROM PYTHON SOURCE LINES 8-23



.. image:: /gallery/symbols/images/sphx_glr_points_001.png
    :alt: points
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|

.. code-block:: default

    import numpy as np
    import pygmt

    # Generate a random set of points to plot
    np.random.seed(42)
    region = [150, 240, -10, 60]
    x = np.random.uniform(region[0], region[1], 100)
    y = np.random.uniform(region[2], region[3], 100)

    fig = pygmt.Figure()
    # Create a 15x15 cm basemap with a Cartesian projection (X) using the data region
    fig.basemap(region=region, projection="X15c", frame=True)
    # Plot using triangles (i) of 0.5 cm
    fig.plot(x, y, style="i0.5c", color="black")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.369 seconds)


.. _sphx_glr_download_gallery_symbols_points.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: points.py <points.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: points.ipynb <points.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
